--- a/src/index.css
+++ b/src/index.css
@@ -48,21 +48,28 @@ code {
   width: 100%;
   height: 6rem;
   vertical-align: middle;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 #DragonLogoText {
   display: inline-block;
   position: absolute;
   vertical-align: middle;
+  /* overflow: hidden; */
   top: 0;
   left: 0;
 }
 
-/* Small devices (landscape phones, less than 768px) */
+/* Small devices */
 @media (max-width: 576px) {
   #BrandLogoContainer {
     transform: scale(0.7) translateX(-20%);
   }
 }
+
+@media (max-width: 450px) {
+    #BrandLogoContainer {
+      transform: scale(0.55) translateX(-40%);
+    }
+  }
 /* END Dragon's Lair Logo styling */
